@@ -1,4 +1,3 @@
-
 import sbt._
 import Keys._
 import Process._
@@ -7,61 +6,78 @@ import java.io.File
 
 
 object ScalaMeterBuild extends Build {
-  
-  /* tasks and settings */
-  
-  val javaCommand = TaskKey[String](
-    "java-command",
-    "Creates a java vm command for launching a process."
-  )
-  val javaCommandSetting = javaCommand <<= (
-    dependencyClasspath in Compile,
-    artifactPath in (Compile, packageBin),
-    artifactPath in (Test, packageBin),
-    packageBin in Compile,
-    packageBin in Test
-  ) map {
-    (dp, jar, testjar, pbc, pbt) => // -XX:+UseConcMarkSweepGC  -XX:-DoEscapeAnalysis -XX:MaxTenuringThreshold=12 -XX:+PrintGCDetails 
-    //val cp = dp.map("\"" + _.data + "\"") :+ ("\"" + jar +"\"") :+ ("\"" + testjar + "\"")
-    val cp = dp.map(_.data) :+ jar :+ testjar
-    val javacommand = "java -Xmx2048m -Xms2048m -XX:+UseCondCardMark -verbose:gc -server -cp %s".format(
-      cp.mkString(File.pathSeparator)
-    )
-    javacommand
-  }
-  
-  val runsuiteTask = InputKey[Unit](
-    "runsuite",
-    "Runs the benchmarking suite."
-  ) <<= inputTask {
-    (argTask: TaskKey[Seq[String]]) =>
-    (argTask, javaCommand) map {
-      (args, jc) =>
-      val javacommand = jc
-      val comm = javacommand + " " + "org.scalameter.Main" + " " + args.mkString(" ")
-      println("Executing: " + comm)
-      val exitcode = comm!;
-      if (exitcode != 0) error("Tests not passing.")
-    }
-  }
 
-  val publishCredFile = "scalameter.maven.credentials-file"
+  val publishUser = "SONATYPE_USER"
+  val publishPass = "SONATYPE_PASS"
 
-  val publishCreds: Seq[Setting[_]] = Seq(sys.props.get(publishCredFile) match {
-    case Some(fileName) =>
-      credentials += Credentials({ new java.io.File(sys.props(publishCredFile)) })
-   case None =>
-     // prevent publishing
-     publish <<= streams.map(_.log.info("Publishing to Sonatype is disabled since the \"" + publishCredFile + "\" variable is not set."))
+  val userPass = for {
+    user <- sys.env.get(publishUser)
+    pass <- sys.env.get(publishPass)
+  } yield (user, pass)
+
+  val publishCreds: Seq[Setting[_]] = Seq(userPass match {
+    case Some((user, pass)) =>
+      credentials += Credentials("Sonatype Nexus Repository Manager", "oss.sonatype.org", user, pass)
+    case None =>
+      // prevent publishing
+      publish <<= streams.map(_.log.info("Publishing to Sonatype is disabled since the \"" + publishUser + "\" and/or \"" + publishPass + "\" environment variables are not set."))
   })
 
+  val scalaMeterSettings = Defaults.defaultSettings ++ publishCreds ++ Seq(
+    scalaVersion := "2.11.0-RC1",
+    scalacOptions ++= Seq("-deprecation", "-unchecked", "-feature", "-Xlint"),
+    resolvers ++= Seq(
+      "Sonatype OSS Snapshots" at "https://oss.sonatype.org/content/repositories/snapshots",
+      "Sonatype OSS Releases" at "https://oss.sonatype.org/content/repositories/releases"
+    ),
+    libraryDependencies ++= List(
+      "org.scalatest" %% "scalatest" % "2.1.0" % "test",
+      "com.github.wookietreiber" %% "scala-chart" % "0.4.0-SNAPSHOT",
+      "org.apache.commons" % "commons-math3" % "3.2",
+      "org.scala-tools.testing" % "test-interface" % "0.5",
+      "org.scala-lang" % "scala-reflect" % "2.11.0-RC1",
+      "org.scala-lang.modules" %% "scala-xml" % "1.0.0",
+      "org.scala-lang.modules" %% "scala-parser-combinators" % "1.0.0"
+    ),
+    publishMavenStyle := true,
+    publishTo <<= version { (v: String) =>
+      val nexus = "https://oss.sonatype.org/"
+      if (v.trim.endsWith("SNAPSHOT"))
+        Some("snapshots" at nexus + "content/repositories/snapshots")
+      else
+        Some("releases"  at nexus + "service/local/staging/deploy/maven2")
+    },
+    publishArtifact in Test := false,
+    pomIncludeRepository := { _ => false },
+    pomExtra :=
+      <url>http://scalameter.github.io/</url>
+      <licenses>
+        <license>
+          <name>BSD-style</name>
+          <url>http://opensource.org/licenses/BSD-3-Clause</url>
+          <distribution>repo</distribution>
+        </license>
+      </licenses>
+      <scm>
+        <url>git@github.com:scalameter/scalameter.git</url>
+        <connection>scm:git:git@github.com:scalameter/scalameter.git</connection>
+      </scm>
+      <developers>
+        <developer>
+          <id>axel22</id>
+          <name>Aleksandar Prokopec</name>
+          <url>http://axel22.github.com/</url>
+        </developer>
+      </developers>
+  )
+
   /* projects */
-  
+
   lazy val scalameter = Project(
     "scalameter",
     file("."),
-    settings = Defaults.defaultSettings ++ Seq(runsuiteTask, javaCommandSetting) ++ publishCreds
+    settings = scalaMeterSettings
   ) dependsOn (
   )
-  
+
 }
